--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- quotes will display here-->
         </div>
         <div class="button">
-            <button id="quotebttn" onclick="newQuote()">Click Me</button>
+            <button id="quotebttn" onclick="playClickSound()" onclick="newQuote()">Click Me</button>
         </div>
     </div>
 
