--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css">
     <title>Quote Generator</title>
     <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/alternative-medicine-flat/64/yin-yang-balance-chinese-philosophy-512.png">
